[gd_scene load_steps=6 format=3 uid="uid://ctepwvhl6clus"]

[ext_resource type="Script" uid="uid://buy0vtlppa3jn" path="res://ui/inventory/3.0/inventory_interface.gd" id="1_caxe5"]
[ext_resource type="PackedScene" uid="uid://b6a88vw5glb7n" path="res://ui/inventory/3.0/inventory.tscn" id="2_n5hmi"]
[ext_resource type="PackedScene" uid="uid://5cgjmdxllnhl" path="res://ui/hideout/hideout_menu.tscn" id="2_r05sy"]
[ext_resource type="PackedScene" uid="uid://5kxtoc8tn1ps" path="res://ui/inventory/3.0/slot.tscn" id="3_xhv20"]
[ext_resource type="PackedScene" uid="uid://cts4vsll0guse" path="res://ui/inventory/ammo/ammo.tscn" id="4_wdh2q"]

[node name="InventoryInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_caxe5")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ExternalInventorySpacer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExternalInventory" parent="MarginContainer/HBoxContainer/ExternalInventorySpacer" instance=ExtResource("2_n5hmi")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HideoutMenu" parent="MarginContainer/HBoxContainer/ExternalInventorySpacer" instance=ExtResource("2_r05sy")]
unique_name_in_owner = true
visible = false
layout_mode = 2
current_tab = 1

[node name="STASH" parent="MarginContainer/HBoxContainer/ExternalInventorySpacer/HideoutMenu" index="1"]
visible = false

[node name="NEXT MAP" parent="MarginContainer/HBoxContainer/ExternalInventorySpacer/HideoutMenu" index="2"]
visible = true

[node name="ItemDetailContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/ExternalInventorySpacer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="DropAreaSpacer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerInventorySpacer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="MarginContainer/HBoxContainer/PlayerInventorySpacer"]
layout_mode = 2
current_tab = 0

[node name="ITEMS" parent="MarginContainer/HBoxContainer/PlayerInventorySpacer/TabContainer" instance=ExtResource("2_n5hmi")]
unique_name_in_owner = true
layout_mode = 2
metadata/_tab_index = 0

[node name="AMMO" parent="MarginContainer/HBoxContainer/PlayerInventorySpacer/TabContainer" instance=ExtResource("4_wdh2q")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="GrabbedSlot" parent="." instance=ExtResource("3_xhv20")]
modulate = Color(1, 1, 1, 0.490196)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 929.0
offset_top = 249.0
offset_right = 977.0
offset_bottom = 297.0

[node name="FoleyAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
max_polyphony = 8

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]

[editable path="MarginContainer/HBoxContainer/ExternalInventorySpacer/HideoutMenu"]
[editable path="MarginContainer/HBoxContainer/ExternalInventorySpacer/HideoutMenu/STASH"]
[editable path="MarginContainer/HBoxContainer/ExternalInventorySpacer/HideoutMenu/STASH/VBoxContainer/HBoxContainer/PolymerCount"]
[editable path="MarginContainer/HBoxContainer/ExternalInventorySpacer/HideoutMenu/STASH/VBoxContainer/HBoxContainer/ScrapMetalCount"]
[editable path="MarginContainer/HBoxContainer/ExternalInventorySpacer/HideoutMenu/STASH/VBoxContainer/HBoxContainer/BioGelCount"]
